// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex actions 1`] = `
Object {
  "workflow": Object {
    "nodes": Object {
      "makeIndividual": Object {
        "action": Object {
          "entity": "individual",
          "id": "makeIndividual",
          "type": "MakeAction",
        },
        "type": "WorkflowAction",
      },
      "pickIndividual": Object {
        "action": Object {
          "entity": "individual",
          "fields": Array [],
          "id": "pickIndividual",
          "type": "PickAction",
        },
        "type": "WorkflowAction",
      },
      "pickMakeIndividual": Object {
        "choice": Array [
          Object {
            "ref": "pickIndividual",
            "type": "WorkflowRef",
          },
          Object {
            "ref": "makeIndividual",
            "type": "WorkflowRef",
          },
        ],
        "type": "WorkflowChoice",
      },
      "start": Object {
        "choice": Array [
          Object {
            "sequence": Array [
              Object {
                "ref": "pickMakeIndividual",
                "type": "WorkflowRef",
              },
              Object {
                "ref": "viewIndividual",
                "type": "WorkflowRef",
              },
            ],
            "type": "WorkflowSequence",
          },
          Object {
            "ref": "makeIndividual",
            "type": "WorkflowRef",
          },
        ],
        "type": "WorkflowChoice",
      },
      "viewIndividual": Object {
        "action": Object {
          "entity": "individual",
          "fields": Array [],
          "id": "viewIndividual",
          "type": "ViewAction",
        },
        "type": "WorkflowAction",
      },
    },
    "start": Object {
      "ref": "start",
      "type": "WorkflowRef",
    },
  },
}
`;

exports[`deep sequence opt 1`] = `
Object {
  "workflow": Object {
    "nodes": Object {
      "makeIndividual": Object {
        "action": Object {
          "entity": "individual",
          "id": "makeIndividual",
          "type": "MakeAction",
        },
        "type": "WorkflowAction",
      },
      "pickIndividual": Object {
        "action": Object {
          "entity": "individual",
          "fields": Array [],
          "id": "pickIndividual",
          "type": "PickAction",
        },
        "type": "WorkflowAction",
      },
      "start": Object {
        "sequence": Array [
          Object {
            "ref": "pickIndividual",
            "type": "WorkflowRef",
          },
          Object {
            "ref": "viewIndividual",
            "type": "WorkflowRef",
          },
          Object {
            "ref": "makeIndividual",
            "type": "WorkflowRef",
          },
        ],
        "type": "WorkflowSequence",
      },
      "viewIndividual": Object {
        "action": Object {
          "entity": "individual",
          "fields": Array [],
          "id": "viewIndividual",
          "type": "ViewAction",
        },
        "type": "WorkflowAction",
      },
    },
    "start": Object {
      "ref": "start",
      "type": "WorkflowRef",
    },
  },
}
`;

exports[`recursive actions 1`] = `
Object {
  "workflow": Object {
    "nodes": Object {
      "editIndividual": Object {
        "action": Object {
          "entity": "individual",
          "id": "editIndividual",
          "type": "MakeAction",
        },
        "type": "WorkflowAction",
      },
      "pickIndividual": Object {
        "action": Object {
          "entity": "individual",
          "fields": Array [],
          "id": "pickIndividual",
          "type": "PickAction",
        },
        "type": "WorkflowAction",
      },
      "start": Object {
        "sequence": Array [
          Object {
            "ref": "pickIndividual",
            "type": "WorkflowRef",
          },
          Object {
            "ref": "editIndividual",
            "type": "WorkflowRef",
          },
          Object {
            "ref": "start",
            "type": "WorkflowRef",
          },
        ],
        "type": "WorkflowSequence",
      },
    },
    "start": Object {
      "ref": "start",
      "type": "WorkflowRef",
    },
  },
}
`;

exports[`simple actions 1`] = `
Object {
  "workflow": Object {
    "nodes": Object {
      "start": Object {
        "action": Object {
          "entity": "individual",
          "fields": Array [],
          "id": "start",
          "type": "PickAction",
        },
        "type": "WorkflowAction",
      },
    },
    "start": Object {
      "ref": "start",
      "type": "WorkflowRef",
    },
  },
}
`;
